@@ -39,7 +39,7 @@ module Devise
       # Attempt to find the mapped route for devise based on request path
       def devise_mapping
         @devise_mapping ||= begin
-          mapping   = Devise::Mapping.find_by_path(request.path_info)
+          mapping   = Devise::Mapping.find_by_path(request)
           mapping ||= Devise.mappings[Devise.default_scope] if Devise.use_default_scope
           mapping
         end
